--- a/ClientApp/src/app/components/canvas/canvas.component.scss
+++ b/ClientApp/src/app/components/canvas/canvas.component.scss
@@ -9,8 +9,8 @@
 
 .canvas-container {
   height: 100vh;
-  overflow-y: scroll;
-  overflow-x: auto;
+  //overflow-y: scroll;
+  //overflow-x: auto;
   position: relative;
 }
 
